--- a/style.css
+++ b/style.css
@@ -5,8 +5,5 @@
     align-items: center;
     height: 100vh;
     margin: -10px;
-    background-color: rgb(209, 87, 154);
-}
-#button{
-    border: 1px solid black;
+    background-color: black;
 }
