--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
     
     align-items: center;
     height: 100vh;
-    margin: -10px;
+    margin: -20px;
     background-color: black;
 }
 
 h2{
     text-align: center;
-    padding: 20px;
-    margin: 50px;
+  
     color: white;
+    padding: 20px;;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
